# microservice_playground

./: LICENSE  README.md
rust_service/: .dockerignore  Cargo.toml  docker-compose.develop.yml  docker-compose.yml  dockerfile.anime  dockerfile.anime.develop  dockerfile.auth  dockerfile.auth.develop
rust_service/anime/: Cargo.toml
rust_service/anime/src/: main.rs
rust_service/auth/: Cargo.toml
rust_service/auth/src/: main.rs
rust_service/core/: Cargo.toml
rust_service/core/src/: lib.rs
