[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1"
actix-web = "4"
rand = "0.8.4"
jsonwebtoken = {version = "8", default-features = false }
chrono = "0.4.19"
anyhow = "1.0.56"
